# newsletter

./: .env  Cargo.toml  Dockerfile  configuration.yml
.github/workflows/: audit.yml  general.yml
configuration/: base.yml
script/: init_db.sh
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health.rs  mod.rs  subscription.rs
tests/: health.rs
