[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.7.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# 3 crates used for logging 
tracing = { verion = "0.1", features = ["log"]}
# This crate is a superset of env_logger crate. Developed by tracing dev
tracing-subscriber = { verion = "0.3", features = ["registry", "env-filter"]} 
# This crate is to format output in pretty form (JSON)
tracing-bunyan-formatter = "0.3.9" 
tracing-log = "0.2.0"
tracing-actix-web = "0.7.11" 
secrecy = {version = "0.8" , features = ["serde"]}
reqwest = {version = "0.12.5", features = ["json"] }
serde = {version = "1.0.203", features = ["derive"]}
config = "0.14.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", default-features = false , features = ["clock"] }
[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "postgres", 
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "migrate",
    "uuid",    
]

[dev-dependencies]
# Use this crate to initialze fn init_subscriber many times for testing
once_cell = "1" 